--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
+    "select2-react-component": "^6.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
