--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.7.0",
     "chartjs": "^0.3.24",
+    "cors": "^2.8.5",
     "node-sass": "^6.0.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-datepicker": "^4.6.0",
